welcome.lessons.welcome.array.island.Island.scala.error
island:8: error: not found: value i
			if (T(i)==M) {
                              ^island:9: error: not found: value i
				T(i)=Math.max(T(i-1)+T(i+1))			
                                  ^